fixes white space on augmented reality examples

--- a/packages/modelviewer.dev/styles/examples.css
+++ b/packages/modelviewer.dev/styles/examples.css
@@ -695,7 +695,8 @@ paper-button {
 }
 
 .eg-image {
-    max-width: 40vw;
+    max-width: 20vw;
+    display: block;
 }
 
 @media only screen and (min-width: 1664px) {
@@ -712,6 +713,7 @@ paper-button {
   }
     .eg-image {
         max-width: 20vw;
+        display: block;
     }
 }
 
